fixed profile image on mobile

--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ p {
     }
 
     .logoDiv {
-        top: -335px;
+        top: -319px;
     }
 
     .logo {
